sidebar, botón volver y navbar actualizado

--- a/DERYA/about.html
+++ b/DERYA/about.html
@@ -11,9 +11,6 @@
     <nav>
       <ul class="nav-list">
         <li><a href="/">Inicio</a></li>
-        <li><a href="/lesson/1">Lección 1</a></li>
-        <li><a href="/lesson/2">Lección 2</a></li>
-        <li><a href="/lesson/3">Lección 3</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contacto</a></li>
       </ul>
@@ -22,8 +19,14 @@
     <main class="lesson-wrapper">
       <section class="chapter">
         <h2>Sobre este proyecto</h2>
-        <p>Core Node Lessons es una colección de lecciones prácticas para aprender Node.js: event emitters, streams y control de errores.</p>
-        <p>Creado por Derya Engin y Vera Rubio. Este sitio está pensado como material didáctico y ejemplos prácticos.</p>
+        <p>
+          Core Node Lessons es una colección de lecciones prácticas para
+          aprender Node.js: event emitters, streams y control de errores.
+        </p>
+        <p>
+          Creado por Derya Engin y Vera Rubio. Este sitio está pensado como
+          material didáctico y ejemplos prácticos.
+        </p>
       </section>
     </main>
 
