--- a/DERYA/contact.html
+++ b/DERYA/contact.html
@@ -11,9 +11,6 @@
     <nav>
       <ul class="nav-list">
         <li><a href="/">Inicio</a></li>
-        <li><a href="/lesson/1">Lección 1</a></li>
-        <li><a href="/lesson/2">Lección 2</a></li>
-        <li><a href="/lesson/3">Lección 3</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contacto</a></li>
       </ul>
@@ -22,14 +19,13 @@
     <main class="lesson-wrapper">
       <section class="chapter">
         <h2>Contacto</h2>
-        <p>
-          Si quieres colaborar, proponer cambios o reportar un error, escríbenos
-          a:
-        </p>
+        <p>Si quieres proponer cambios o reportar un error, escríbenos a:</p>
         <ul>
           <li>Email: <strong>tu-email@ejemplo.com</strong></li>
           <li>
             LinkedIn:
+            <a href="https://www.linkedin.com" target="_blank">Vera Rubio</a
+            ><br />
             <a href="https://www.linkedin.com" target="_blank">Derya Engin</a>
           </li>
         </ul>
