--- a/DERYA/index.html
+++ b/DERYA/index.html
@@ -12,9 +12,6 @@
     <nav>
       <ul class="nav-list">
         <li><a href="/">Inicio</a></li>
-        <li><a href="/lesson/1">Lección 1</a></li>
-        <li><a href="/lesson/2">Lección 2</a></li>
-        <li><a href="/lesson/3">Lección 3</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contacto</a></li>
       </ul>
@@ -24,7 +21,7 @@
     <section class="lecciones">
       <div class="leccion" onclick="location.href='/lesson/1'">
         <div class="icono">⚡</div>
-        <h2>Event emitters</h2>
+        <h2>Event Emitters</h2>
         <p>Cómo funcionan los eventos y la comunicación interna.</p>
       </div>
 
@@ -36,7 +33,7 @@
 
       <div class="leccion" onclick="location.href='/lesson/3'">
         <div class="icono">🚨</div>
-        <h2>Error control</h2>
+        <h2>Error Control</h2>
         <p>Manejo seguro y elegante de errores en Node.js.</p>
       </div>
     </section>
