terminado proyecto hackhaton

--- a/DERYA/index.html
+++ b/DERYA/index.html
@@ -40,12 +40,17 @@
 
     <!-- FOOTER -->
     <footer>
-      <a href="https://www.linkedin.com" target="_blank">Derya Engin</a>
-      <a href="https://www.linkedin.com" target="_blank">Vera Rubio</a>
+      <a
+        href="https://www.linkedin.com/in/derya-engin-nal%C4%B1nc%C4%B1-43a9701b/"
+        target="_blank"
+        >Derya Engin</a
+      >
+      <a
+        href="https://www.linkedin.com/in/vera-rubio-161089163/"
+        target="_blank"
+        >Vera Rubio</a
+      >
       <p>© 2025 - 2026 All rights reserved</p>
     </footer>
-
-    <!-- ❌ NO cargar server.js aquí -->
-    <!-- <script type="module" src="/server.js"></script> -->
   </body>
 </html>
