--- a/DERYA/contact.html
+++ b/DERYA/contact.html
@@ -21,12 +21,19 @@
         <h2>Contacto</h2>
         <p>Si quieres proponer cambios o reportar un error, escríbenos a:</p>
         <ul>
-          <li>Email: <strong>tu-email@ejemplo.com</strong></li>
+          <li>Email: <strong>info@albaniles-digitales.com</strong></li>
           <li>
             LinkedIn:
-            <a href="https://www.linkedin.com" target="_blank">Vera Rubio</a
+            <a
+              href="https://www.linkedin.com/in/vera-rubio-161089163/"
+              target="_blank"
+              >Vera Rubio</a
             ><br />
-            <a href="https://www.linkedin.com" target="_blank">Derya Engin</a>
+            <a
+              href="https://www.linkedin.com/in/derya-engin-nal%C4%B1nc%C4%B1-43a9701b/"
+              target="_blank"
+              >Derya Engin</a
+            >
           </li>
         </ul>
         <p>
@@ -37,8 +44,16 @@
     </main>
 
     <footer>
-      <a href="https://www.linkedin.com" target="_blank">Derya Engin</a>
-      <a href="https://www.linkedin.com" target="_blank">Vera Rubio</a>
+      <a
+        href="https://www.linkedin.com/in/derya-engin-nal%C4%B1nc%C4%B1-43a9701b/"
+        target="_blank"
+        >Derya Engin</a
+      >
+      <a
+        href="https://www.linkedin.com/in/vera-rubio-161089163/"
+        target="_blank"
+        >Vera Rubio</a
+      >
       <p>© 2025 - 2026 All rights reserved</p>
     </footer>
   </body>
